random fixes: description spacing, logo, etc

--- a/src/components/Album.module.css
+++ b/src/components/Album.module.css
@@ -10,6 +10,10 @@
     margin: 2em;
 }
 
+.albumDescription p+p {
+    margin-top: 1em
+}
+
 @media only screen and (min-width: 650px){
     .album {
         max-width: 65%;
