--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -42,8 +42,9 @@ ul {
 }
 
 .logo {
-  font-size: 2em;
+  font-size: 3em;
   font-weight: 900;
+  font-style: italic;
 }
 
 .logo li {
